Organizes into folders

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Dillon Lee</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" href="img/website-icon.ico">
+  <link rel="stylesheet" href="css/main.css">
   <style type="text/css"></style>
 </head>
 <header>
