Change some styling

--- a/src/examples.html
+++ b/src/examples.html
@@ -30,10 +30,12 @@
     <br>
 
     <div id="details">
-      <h2>Experience</h2>
-      <p>A whole lot!</p>
-      <h2>Currently Working On</h2>
-      <p>This website!</p>
+      <h2>Examples</h2>
+      <ul style="list-style-type:none">
+        <li><a href="https://github.com/Aggredicus/portfolio-website"></a>This website!</li>
+        <li>Coming Soon: Machine Learning!</li>
+        <li>Coming Soon: Bioinformatics!</li>
+      </ul>
     </div>
 
     <footer>
