--- a/src/contact.html
+++ b/src/contact.html
@@ -34,7 +34,10 @@
     <div id="details">
       <h2>Social Media</h2>
       <ul style="list-style-type:none">
-        <li><!-- LinkedIn Badge START --><script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+        <li><!-- LinkedIn Badge START -->
+          <a href="https://www.linkedin.com/pub/dillon-lee/48/591/9b5">
+            <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" border="0" alt="View Dillon Lee's profile on LinkedIn">
+          </a>
 <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/dillon-lee-9b559148" data-format="hover" data-text="Dillon Lee"></script></li>
         <li><!-- Twitter Badge START --><a href="https://twitter.com/BioLeeGist" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @BioLeeGist</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
